add validation-password rewrite also to login form

--- a/app/design/frontend/base/default/layout/allbear_pciauth.xml
+++ b/app/design/frontend/base/default/layout/allbear_pciauth.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0"?>
 <layout version="0.1.0">
-    <customer_account_create>
+    <validation_password_rewrite>
         <reference name="before_body_end">
             <block type="allbear_pciauth/template" template="allbear/pciauth/customer/form/register/additional_js.phtml"/>
         </reference>
+    </validation_password_rewrite>
+
+    <customer_account_create>
+        <update handle="validation_password_rewrite" />
     </customer_account_create>
+    
+    <customer_account_login>
+        <update handle="validation_password_rewrite" />
+    </customer_account_login>
 </layout>
